[tool.poetry]
name = "not-serverless-hex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "not_serverless_hex"}]

[tool.poetry.dependencies]
python = "^3.9"
sendgrid = "^6.9.7"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^1.26.3"
boto3 = "^1.24.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
